force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__AssociatedObjectDisplayValue__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AssociatedObjectDisplayValue__c</fullName>
    <inlineHelpText>Associate Object Display Value</inlineHelpText>
    <label>Associated Object Display Value</label>
    <length>160</length>
    <type>Text</type>
</CustomField>