force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__AssociatedObjectRecordID__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AssociatedObjectRecordID__c</fullName>
    <inlineHelpText>Associated Object record ID</inlineHelpText>
    <label>Associated Object Record ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>