force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__ASVTotal__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ASVTotal__c</fullName>
    <description>Total amount entered into the Transaction - usually during renewals.</description>
    <inlineHelpText>Total amount entered into the Transaction - usually during renewals.</inlineHelpText>
    <label>ASV</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>