force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__ChurnReason__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ChurnReason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select Churn Reason (applicable for Churn Transactions only). Churn reasons are customizable by adding records into PickList object.</description>
    <inlineHelpText>Select Churn Reason (applicable for Churn Transactions only).</inlineHelpText>
    <label>Churn Reason</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Transaction Header (Churn Reason)</relationshipLabel>
    <relationshipName>TransHeaderChurnReason</relationshipName>
    <type>Lookup</type>
</CustomField>