force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__FcstASV__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__FcstASV__c</fullName>
    <description>Forecast ASV.</description>
    <inlineHelpText>Forecast ASV.</inlineHelpText>
    <label>Fcst ASV</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>