force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__FcstBookingDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__FcstBookingDate__c</fullName>
    <description>Forecast Booking Date</description>
    <inlineHelpText>Forecast Booking Date</inlineHelpText>
    <label>Fcst Booking Date</label>
    <type>Date</type>
</CustomField>