force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__FcstMRR__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__FcstMRR__c</fullName>
    <description>Forecast MRR</description>
    <inlineHelpText>Forecast MRR</inlineHelpText>
    <label>Fcst MRR</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>