force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__FcstUser__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__FcstUser__c</fullName>
    <description>Forecast user</description>
    <inlineHelpText>Forecast user</inlineHelpText>
    <label>Fcst User</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>