force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__Main__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Main__c</fullName>
    <defaultValue>false</defaultValue>
    <description>There should be only main transaction at one time. Usually the New Business or the most Resent Renewal transaction available for a Customer.</description>
    <inlineHelpText>There should be only main transaction at one time. Usually the New Business or the most Resent Renewal transaction available for a Customer.</inlineHelpText>
    <label>Main</label>
    <type>Checkbox</type>
</CustomField>