force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__Name__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Name__c</fullName>
    <description>Transaction Name - Defaulted to Opportunity Name if the connector is used or the Booking Type if the Opportunity is not mapped.</description>
    <inlineHelpText>Transaction Name - Defaulted to Opportunity Name if the connector is used or the Booking Type if the Opportunity is not mapped.</inlineHelpText>
    <label>Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>