force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__NextRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NextRenewalDate__c</fullName>
    <description>Next Renewal Date</description>
    <inlineHelpText>Next Renewal Date</inlineHelpText>
    <label>RenewalDate</label>
    <type>Date</type>
</CustomField>