force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__OneTimeRevenue__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OneTimeRevenue__c</fullName>
    <description>One-time revenue</description>
    <inlineHelpText>One-time revenue</inlineHelpText>
    <label>OneTime</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>