force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity record from that triggered the creation of the transaction object</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transaction Header</relationshipLabel>
    <relationshipName>Transaction_Header</relationshipName>
    <type>Lookup</type>
</CustomField>