force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__OrderType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OrderType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>New Business: First business transaction&lt;br&gt;&lt;br&gt;Renewal: Renewal date auto populated &lt;br&gt;&lt;br&gt;Upsell / Downsell: Subsequent Upsell or Downsell transactions&lt;br&gt;&lt;br&gt;Debook: Any corrections to the previously booked amounts&lt;br&gt;&lt;br&gt;Churn: Churn transaction</inlineHelpText>
    <label>Booking Type</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Transaction Header (Order Type)</relationshipLabel>
    <relationshipName>TransHeaderOrderType</relationshipName>
    <type>Lookup</type>
</CustomField>