force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__ParentTransaction__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ParentTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Transaction</label>
    <referenceTo>JBCXM__TransHeader__c</referenceTo>
    <relationshipLabel>Transaction Header (Parent Transaction)</relationshipLabel>
    <relationshipName>ParentTransaction</relationshipName>
    <type>Lookup</type>
</CustomField>