force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__Renewable__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Renewable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>All transactions that have recurring component are renewable. Transaction that have only a fixed revenue component are not renewable</description>
    <inlineHelpText>All transactions that have recurring component are renewable. Transaction that have only a fixed revenue component are not renewable</inlineHelpText>
    <label>Renewable</label>
    <type>Checkbox</type>
</CustomField>