force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__RenewalOpportunity__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RenewalOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transaction Header (Renewal Opportunity)</relationshipLabel>
    <relationshipName>Transaction_Header_Renewal_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>