force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__RevRecEndDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RevRecEndDate__c</fullName>
    <description>Deferred Revenue Recognition End Date</description>
    <inlineHelpText>Deferred Revenue Recognition End Date</inlineHelpText>
    <label>Subscription End Date</label>
    <type>Date</type>
</CustomField>