force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__SalesRep__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SalesRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Representative</description>
    <inlineHelpText>Sales Representative (optional field)</inlineHelpText>
    <label>SalesRep</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Transaction Header (Sales Rep)</relationshipLabel>
    <relationshipName>TransHeaderSalesRep</relationshipName>
    <type>Lookup</type>
</CustomField>