force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__Users__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Users__c</fullName>
    <description>User licenses/count</description>
    <inlineHelpText>User licenses/count</inlineHelpText>
    <label>Users Delta</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>