force-app/main/default/objects/JBCXM__TransHeader__c/fields/JBCXM__UsersTotal__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UsersTotal__c</fullName>
    <description>Total amount entered into the Transaction - usually during renewals.</description>
    <inlineHelpText>Total amount entered into the Transaction - usually during renewals.</inlineHelpText>
    <label>Users</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>